[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/entity/DemonPart.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/ToolTip.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/effects_sheet.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 20, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "holding",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "spark",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=11]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="DemonPart" type="RigidBody2D"]
z_index = 5
collision_mask = 134
input_pickable = true
mass = 10.0
gravity_scale = 0.0
linear_damp = 10.0
angular_damp = 100.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Flame" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 10 )
animation = "spark"

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 11 )

[node name="PushArea" type="Area2D" parent="."]
collision_layer = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea"]
shape = SubResource( 2 )

[node name="ToolTip" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_DemonPart_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DemonPart_mouse_exited"]
[connection signal="animation_finished" from="Flame" to="." method="_on_Flame_animation_finished"]
[connection signal="body_entered" from="PushArea" to="." method="_on_PushArea_body_entered"]
[connection signal="body_exited" from="PushArea" to="." method="_on_PushArea_body_exited"]
